[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [{include = "fastapi_tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"
fastapi = {extras = ["all"], version = "^0.100.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
